# controller-ui

./: Cargo.toml  Dioxus.toml  out.sh  tailwind.css
assets/: manifest.json  tailwind.css
src/: main.rs
