[package]
name = "controller-ui"
version = "0.1.0"
authors = ["KyleUltimate <shiue.kyle@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = { version = "0.2.35", features = ["fmt"] }
dioxus = { version = "0.7.1", features = [] }
dioxus-logger = "0.7.1"
reqwasm = "0.5.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
